fix: center loader content on mobile

--- a/styles/common.css
+++ b/styles/common.css
@@ -1273,4 +1273,11 @@ footer {
     .footer-banner, .loader-banner {
         font-size: 2.5rem !important;
     }
+
+    .loader-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
